# openGLMinimum

./: CMakeLists.txt  README.md  main.cpp
3rd/freeglut/lib/: freeglut_static.lib  freeglut_staticd.lib
